fix: menu item overflow set to hidden

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -176,6 +176,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    overflow: hidden;
   }
 
   .menu-items li {
